force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <label>Quotation</label>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Quotation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotation</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>