force-app/main/default/objects/Quote__c/fields/Approval_Time__c.field-meta.xml
<CustomField>
    <fullName>Approval_Time__c</fullName>
    <label>Approval Time</label>
    <type>Date</type>
</CustomField>