force-app/main/default/objects/Quote__c/fields/Deliver_Plant__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Plant__c</fullName>
    <defaultValue>$User.Deliver_Plant_Text__c</defaultValue>
    <label>Delivery Plant</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Plant</valueSetName>
    </valueSet>
</CustomField>