force-app/main/default/objects/Quote__c/fields/Is_Approval__c.field-meta.xml
<CustomField>
    <fullName>Is_Approval__c</fullName>
    <label>Negative Gross Margin Item Count</label>
    <summaryFilterItems>
        <field>Quote_Detail__c.BU_Profit_Rate__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote_Detail__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>