force-app/main/default/objects/Quote__c/fields/Is_Customer_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer Confirmed</label>
    <type>Checkbox</type>
</CustomField>