force-app/main/default/objects/Quote__c/fields/Is_Retrograde__c.field-meta.xml
<CustomField>
    <fullName>Is_Retrograde__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is based on market price</label>
    <type>Checkbox</type>
</CustomField>