force-app/main/default/objects/Quote__c/fields/Old_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Old_Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Quotation</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quotation</relationshipLabel>
    <relationshipName>Quotation</relationshipName>
    <type>Lookup</type>
</CustomField>