force-app/main/default/objects/Quote__c/fields/Quotation_Type__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Type__c</fullName>
    <label>Quotation Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>HQ_Purchase</fullName>
                <label>Price List</label>
            </value>
            <value>
                <fullName>Tolling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>