force-app/main/default/objects/Quote__c/fields/Quote_Detail_Count__c.field-meta.xml
<CustomField>
    <fullName>Quote_Detail_Count__c</fullName>
    <label>Quote Detail Count</label>
    <summaryForeignKey>Quote_Detail__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>