force-app/main/default/objects/Quote__c/fields/Sales_Info__c.field-meta.xml
<CustomField>
    <fullName>Sales_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Customer Sales Info</label>
    <referenceTo>Customer_Sales_Info__c</referenceTo>
    <relationshipLabel>Quotation</relationshipLabel>
    <relationshipName>Quote_Sales_Info</relationshipName>
    <type>Lookup</type>
</CustomField>