force-app/main/default/objects/Quote__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <summarizedField>Quote_Detail__c.Item_Cost__c</summarizedField>
    <summaryForeignKey>Quote_Detail__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>