force-app/main/default/objects/Quote__c/fields/Total_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Margin__c</fullName>
    <formula>Total_Price__c - Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>