force-app/main/default/objects/Quote__c/validationRules/Incoterms_Not_Allow_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Incoterms_Not_Allow_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Quote_Detail_Count__c&gt;0,ISCHANGED(Incoterms__c),TEXT(Sales_Org__c)=&apos;3010&apos;)</errorConditionFormula>
    <errorDisplayField>Incoterms__c</errorDisplayField>
    <errorMessage>You cannot update the Incoterms since you have already added quotation details</errorMessage>
</ValidationRule>