force-app/main/default/objects/Quote__c/validationRules/Is_Retrograde_Not_Allow_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Retrograde_Not_Allow_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Quote_Detail_Count__c&gt;0,ISCHANGED(Is_Retrograde__c))</errorConditionFormula>
    <errorMessage>You cannot update whether the quotation is based on market price since you have already added quotation details.</errorMessage>
</ValidationRule>