force-app/main/default/objects/Quote__c/validationRules/Not_Detail_Status_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Detail_Status_Draft</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Quote_Detail_Count__c=0,TEXT(Approval_Status__c) !=&apos;Draft&apos;)</errorConditionFormula>
    <errorMessage>Please add the quotation details before submitting for approval.</errorMessage>
</ValidationRule>