force-app/main/default/objects/Quote__c/validationRules/Payment_Term_Not_Allow_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Term_Not_Allow_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Quote_Detail_Count__c&gt;0,ISCHANGED(Payment_Term__c))</errorConditionFormula>
    <errorMessage>You cannot update the payment term since you have already added quotation details</errorMessage>
</ValidationRule>