force-app/main/default/objects/Quote__c/validationRules/Price_List_Base_market_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_List_Base_market_Price</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Is_Retrograde__c,TEXT(Quotation_Type__c)!=&apos;HQ_Purchase&apos;)</errorConditionFormula>
    <errorMessage>You can only estimate the quotation based on the market price when using the price list.</errorMessage>
</ValidationRule>