force-app/main/default/objects/Quote__c/validationRules/Quotation_Type_Not_Allow_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Quotation_Type_Not_Allow_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Quote_Detail_Count__c&gt;0,ISCHANGED(Quotation_Type__c))</errorConditionFormula>
    <errorMessage>You cannot update the quotation type since you have already added quotation details</errorMessage>
</ValidationRule>