force-app/main/default/objects/Quote__c/listViews/All_Copy.listView-meta.xml
<ListView>
    <fullName>All_Copy</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Quote_Name__c</columns>
    <columns>Sales_Info__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Quotation_Type__c</columns>
    <columns>Approval_Time__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>Business_Model__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Gross_Margin_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>