force-app/main/default/objects/Quote__c/listViews/Approving_Quotation.listView-meta.xml
<ListView>
    <fullName>Approving_Quotation</fullName>
    <columns>NAME</columns>
    <columns>Quote_Name__c</columns>
    <columns>Customer__c</columns>
    <columns>Payment_Term__c</columns>
    <columns>Total_Gross_Margin__c</columns>
    <columns>Deliver_Plant__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approving</value>
    </filters>
    <label>Approving Quotation</label>
</ListView>